# sutskever-30-implementations-zhCN

./: 24_machine_super_intelligence.ipynb  IMPLEMENTATION_TRACKS.md  P1_T3_DELIVERABLES.md  PHASE_3_TRAINING_SUMMARY.md  README.md  TRAINING_QUICK_REFERENCE.md  TRAINING_UTILS_README.md  create_final_summary.py  lstm_babi_model.npz  lstm_baseline_results.json  lstm_tracking_model.npz  pyproject.toml  relational_rnn_results.json  train_lstm_baseline.py  train_relational_rnn.py
01_complexity_dynamics/: 01_complexity_dynamics.ipynb
02_unreasonable_effectiveness_of_rnn/: 02_char_rnn_karpathy.ipynb
03_lstm_networks/: 03_lstm_understanding.ipynb  LSTM_ARCHITECTURE_REFERENCE.md  LSTM_BASELINE_SUMMARY.md  lstm_baseline.py  lstm_baseline_demo.py  lstm_matching_model.npz  lstm_params_info.py
04_rnn_regularization/: 04_rnn_regularization.ipynb
05_neural_network_pruning/: 05_neural_network_pruning.ipynb
06_pointer_networks/: 06_pointer_networks.ipynb
07_alexnet_cnn/: 07_alexnet_cnn.ipynb
08_seq2seq_for_sets/: 08_seq2seq_for_sets.ipynb
09_gpipe/: 09_gpipe.ipynb
10_resnet/: 10_resnet_deep_residual.ipynb
11_dilated_convolutions/: 11_dilated_convolutions.ipynb
12_graph_neural_networks/: 12_graph_neural_networks.ipynb
13_transformer_attention/: 13_attention_is_all_you_need.ipynb  attention_mechanism.py
14_bahdanau_attention/: 14_bahdanau_attention.ipynb
15_identity_mappings_resnet/: 15_identity_mappings_resnet.ipynb
16_relational_reasoning/: 16_relational_reasoning.ipynb
17_variational_autoencoder/: 17_variational_autoencoder.ipynb
29_rag/: 29_rag.ipynb
(+26 files in other folders)
